[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "unofficial-api-for-youporn"
version = "1.6"
description = "An asynchronous high-speed modern Python API for youporn.com: search, videos, channels, pornstars, downloading (selectolax + curl-cffi)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
dependencies = [
    "bs4",
    "eaf-base-api",
    "m3u8",
    "selectolax"
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable"
]

[project.optional-dependencies]
av = ["av; python_version >= '3.10'"]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/unofficial-api-for-youporn"

[tool.setuptools]
packages = { find = {} }

[tool.uv.build-backend]
module-name = "youporn_api"
module-root = ""

[tool.uv.sources]
eaf-base-api = { path = "../eaf_base_api", editable = true }
