[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "unofficial-api-for-youporn"
version = "1.6"
description = "An asynchronous high-speed modern Python API for youporn.com: search, videos, channels, pornstars, downloading (selectolax + curl-cffi)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
keywords = [
    "api",
    "scraper",
    "async",
    "asyncio",
    "video-downloader",
    "selectolax",
    "curl-cffi",
    "youporn"
]
dependencies = [
    "bs4",
    "eaf-base-api",
    "m3u8",
    "selectolax",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video"
]

[project.optional-dependencies]
av = ["av"]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/unofficial-api-for-youporn"
Repository = "https://github.com/EchterAlsFake/unofficial-api-for-youporn"
"Bug Tracker" = "https://github.com/EchterAlsFake/unofficial-api-for-youporn/issues"
"Support me on Ko-Fi" = "https://ko-fi.com/EchterAlsFake"
"Donate via PayPal" = "https://paypal.me/EchterAlsFake"
"Donate via Crypto" = "https://nowpayments.io/donation/EchterAlsFake"

[tool.setuptools]
packages = { find = {} }

[tool.uv.build-backend]
module-name = "youporn_api"
module-root = ""
